--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>WEB PROJECT TEMPLATE</title>
 		<!-- Includes: JavaScript -->
-		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 		<!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script> -->
 
 		<!-- Includes: CSS -->
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 
-
+		<p>helluuuu!!!!</p>
 
 		<script type="text/javascript" src="js/js_template.js"></script>
 	</body>
