--- a/index.html
+++ b/index.html
@@ -7,14 +7,33 @@
 		<!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script> -->
 
 		<!-- Includes: CSS -->
-		<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> -->
-		<!-- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
-		<link rel="stylesheet" type="text/css" href="css/css_template.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
 
 		<p>helluuuu!!!!</p>
 
-		<script type="text/javascript" src="js/js_template.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+		
+
+		<script type="text/javascript" src="js/tobepe.js"></script>
 	</body>
 </html>
